update 3.0